--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="dashboard">
         <div class="page-header">
             <div class="header-text">
-                <h1 class="page-title">System Monitoring</h1>
+                <h1 class="page-title">SuperAdmin Dashboard</h1>
             </div>
             <div class="date-range">
                 <input type="text" id="fromDate" placeholder="From Date" readonly>
