--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="card">
                 <div class="card-header">
                     <div class="card-icon">📅</div>
-                    <div class="card-title">Total Meetings Today</div>
+                    <div class="card-title">Total Meetings</div>
                 </div>
                 <div class="card-value">142</div>
                 <div class="card-stats grid-stats">
